Fix workspaces preview overflow

--- a/client/web/src/enterprise/batches/create/CreateOrEditBatchChangePage.module.scss
+++ b/client/web/src/enterprise/batches/create/CreateOrEditBatchChangePage.module.scss
@@ -27,7 +27,6 @@
     margin-left: 1rem;
     background: none;
     border: none;
-    width: 100%;
 }
 
 // Should mostly match WorkspacesPreview header and LibraryPane header
